k8smanifests/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
